traversal.column.traversalbycolumn.TraversalByColumn.scala.error
Compilation error:
TraversalByColumn:16: error: '=' expected but identifier found.
def position finale () : Boolean = {
             ^TraversalByColumn:33: error: illegal start of simple expression
	override def forward(i:Int)  { 
^